# petrock

./: .gitignore  .prettierignore  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  deploy.py  ecosystem.config.js  package-lock.json  package.json  run.sh  tsconfig.json
.github/workflows/: codeql-analysis.yml  lint-test-fmt.yml
__OLDSERVER/src/: server.ts
__OLDSERVER/src/db/: connection.ts  serviceRunner.ts
__OLDSERVER/src/db/sql/: types.sql
__OLDSERVER/src/routes/: history.ts  items.ts  leaderboard.ts
__OLDSERVER/tools/db-util/: dbAddItems.html  tools.css
__OLDSERVER/tools/populate-players/: index.ts
__OLDSERVER/tools/process-raw-history/: index.ts  raw_history.json
client/: .env.template  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.svelte  LeaderboardStore.ts  Player.ts  app.css  enums.ts  preload.ts  stores.ts  time.ts
client/src/components/: ChangeLog.svelte  Footer.svelte  LeaderboardBody.svelte  LeaderboardHeader.svelte  Nav.svelte
client/src/interfaces/: ChangeLogEntry.ts  Leaderboard.ts  Player.ts  RawPlayerData.ts
client/src/routes/: Leaderboard.svelte  Leaderboards.svelte  Tracker.svelte
client/src/utils/: constants.ts  getLeaderboardData.ts  getOnlinePlayersList.ts  logging.ts  preload.ts
docs/: LICENSE-APACHE  LICENSE-MIT
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: changelog.rs  leaderboard.rs  main.rs  online_list.rs  postgres.rs
