[package]
name = "server"
authors = ["Rob Wagner <rob@sombia.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
] }
dotenvy = "0.15"
retrommo-fetch = "0.2"
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
tracing = "0.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
